attempt to fix bottom whitespace issue

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,9 @@
 html, body, #map {
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 #map {
   background: white;
